--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.20.24",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "emailjs-com": "^3.2.0",
     "gestalt": "^34.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
