--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/mongoose": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
+    "hbs": "^4.1.2",
     "mongoose": "^6.0.6",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
