--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,16 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "@types/react-redux": "^7.1.20",
+    "axios": "^0.24.0",
     "emailjs-com": "^3.2.0",
     "gestalt": "^34.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
